Fix Title spacing

--- a/src/components/Titles/Titles.module.css
+++ b/src/components/Titles/Titles.module.css
@@ -5,18 +5,6 @@
   margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 40em) {
-  .sectionTitle {
-    margin-bottom: 2rem;
-  }
-}
-
-@media screen and (min-width: 60em) {
-  .sectionTitle {
-    margin-bottom: 3rem;
-  }
-}
-
 .sectionTitle * {
   margin: 0;
 }
@@ -26,6 +14,7 @@
 }
 
 .typewriter {
+  width: fit-content;
   overflow: hidden;
   border-right: 0.2em solid;
   white-space: nowrap;
@@ -48,6 +37,6 @@
     border-color: transparent;
   }
   50% {
-    border-color: black;
+    border-color: var(--text-color);
   }
 }
